src/components/Home/Home.scss
@import '../../scss/variables.scss';
@import '../../scss/mixins.scss';

#home {
  background-image: url("../../images/cutting_vegetables.jpg");
  background-size:cover;
  background-position: center;
  #picture {
    height: 100%;
    background: linear-gradient(120deg, $primary-transparent, $orange-transparent);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .flex {
    padding-top: 5vh;
    @include flexRow;
    justify-content: center;
    @include desktop {
      padding-top: 0px;
    }
    img {
      height: 50px;
      @include desktop {
        height: 75px;
      }
    }
  }
  p {
    color: $white;
  }
  .blurbs {
    text-align: center;
    h4 {
      color: white;
    }
  }
  #phone-image {
    button {
      position: absolute;
      bottom: 50px;
      right: 15px;
      @include tablet {
        position: unset;
        margin: 10px;
      }
    }
    @include tablet {
      padding: 0px;
      width: 75%;
      text-align: center;
      display: flex;
      flex-direction: column-reverse;
      align-items: center;
    }
    img {
      width: 125px;
      @include tablet {
        width: 250px;
      }
    }
    @include desktop {
      > div {
        padding: 0;
        @include flexColumn;
        justify-content: flex-end;
      }
    }
  }
  @keyframes rotate {
    0% { transform: rotate(0deg)}
    50% {transform: rotate(10deg)}
    100% {transform: rotate(0deg)}
  }
}



.fade {
  opacity: 0;
  transform: translateY(30px);
  transition-property: translate opacity;
  transition-duration: 1s;
}

.fade-in {
  opacity: 1!important;
  transform: translateY(0px);
}

